--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2856,7 +2856,7 @@ input, select, textarea {
 				-ms-transition: -ms-transform 0.5s ease;
 				transition: transform 0.5s ease;
 				display: block;
-				height: 44px;
+				height: 22px;
 				left: 0;
 				position: fixed;
 				top: 0;
@@ -2869,9 +2869,9 @@ input, select, textarea {
 					left: 0;
 					top: 0;
 					width: 100%;
-					height: 100%;
+					height: 0%;
 					border: 0;
-					outline: 0;
+					outline: 10%;
 				}
 
 					#navButton .toggle:before {
@@ -2912,7 +2912,7 @@ input, select, textarea {
 				-ms-transition: -ms-transform 0.5s ease;
 				transition: transform 0.5s ease;
 				display: block;
-				height: 50vh;
+				height: 40vh;
 				left: 0;
 				overflow-y: auto;
 				position: fixed;
